# instadram

./: .gitignore  README.md  iba-world-schemaorg.json  package-lock.json  package.json  start.sh  tailwind.config.js
fluree-messages/queries/fluree/: specs.json  specs_analytical.json
fluree-messages/queries/wikidata/: cocktailsByIngredient.json  ibaCocktails.txt  ibaCocktailsAndIngredients.sparqlbook  ingredientsByCocktail.json
fluree-messages/transactions/: 00_schema.json  01_ingredientUnits.json  daiquiri.json  schema.json
instadram-app/: .eslintrc.json  package-lock.json  package.json
instadram-app/pages/: index.tsx
instadram-app/src/: App.js  App.tsx  fluree_conn.js  fluree_utils.js  routes.js
instadram-app/src/components/: AddSpecForm.jsx  RecipeSlideOut.jsx  SpecCard.jsx  portal.jsx
instadram-app/src/layouts/: error-page.jsx  main.jsx
instadram-app/src/pages/: main.jsx
instadram-app/src/screens/: drams.jsx  ingredients.jsx  specs.jsx  splash.jsx
instadram-py/: pyld-workspace.ipynb  pyproject.toml
src/: routes.tsx  types.ts
src/components/: ProfileMenu.tsx  SpecCard.tsx  SpecDialog.tsx  Specs_old.tsx
src/hooks/: useFlureeClient.tsx
src/layouts/: error-page.tsx  main.tsx
src/screens/: Specs.tsx
