[tool.poetry]
name = "instadram-py"
version = "0.1.0"
description = ""
authors = ["Jack White <jwhite5672@gmail.com>"]
readme = "README.md"
packages = [{include = "instadram_py"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
PyLD = "^2.0.3"
SPARQLWrapper = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
